--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -31,11 +31,17 @@
 body { margin-top: 39px;}
 
 header {
-margin-left: -25px;
-position: fixed;
-top: 0;
-width: 100%;
-z-index: 1
+    margin-left: -25px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1
 }
 
 .navbar_fixed { padding: 0 25px;} 
+
+.gridview_flex {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
