--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -28,9 +28,9 @@
 .comment_more {display:none;}
 .short .comment_more {display:block;}
 .short .comment_less {display:none;}
-body { margin-top: 39px;}
+.body { margin-top: 39px;}
 
-header {
+.header {
     margin-left: -25px;
     position: fixed;
     top: 0;
