Updated Endless Scroll & updated Readme
Endless Scroll now has a ajax loader gif and also states that you found
the end of the pages.

--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -45,3 +45,13 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.center_endless_loading {
+    margin: 0 auto;
+    width: 10%;
+}
+
+.center_endless_end {
+    margin: 0 auto;
+    width: 20%;
+}
