--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -59,3 +59,18 @@
 .settings_logo {
     color: #494c64;
 }
+
+.preview { 
+    box-shadow: 1px 1px 0 #fff inset,0 7px 7px rgba(255,255,255,0.37) inset;
+    background-color: rgba(255,255,255,0.2);
+    border: 1px solid #cbcfdb;
+    border-radius: 4px;
+    padding: 15px;
+    margin-top: 10px;
+}
+
+.preview_text{
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #4b72d4;
+}
