More typos on gridview... Still needs to put it on top of everything else instead of eating space.

--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -85,3 +85,7 @@
 .gridview_flex .giveaway-summary__thumbnail-outer-wrap:hover{
     padding-bottom: 116px;
 }
+
+.small_text{
+   font-size:12px;
+}
