--- a/steamgifts-plus-v2.css
+++ b/steamgifts-plus-v2.css
@@ -83,6 +83,8 @@
 }
 
 .gridview_flex .giveaway-summary__thumbnail-outer-wrap:hover{
+    position:absolute;
+    z-index: 5;
     padding-bottom: 116px;
 }
 
